# plotsrv-examples

./: .gitignore  README.md  main.py  old_plotsrv.ini  plotsrv.ini  plotsrv.yml  plotsrv_config_0_0_5.yml  plotsrv_smoketests.yml  pyproject.toml
mock-files/: html-complex-1.html  html-simple-1.html  json-1.json  yaml-1.yaml  yaml-1.yml
src/interactive_tests/: storage_mechanism.py
src/resource-monitor/: dev_validate3.py  main_explicit_decorators.py  main_explicit_non-decorators.py  main_infer_decorators.py  main_infer_non-decorators.py
src/smoke-tests/: basic-smoke-test.py  dev_validate1.py  dev_validate2.py  long_text.txt  manual_interactive_validation_1.py  manual_validation_cli_1.sh  python_objs.py  tracebacks.py
